--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -6,20 +6,20 @@
 
 
 
-@{ string user = User.Identity.Name;
+@{  string user = User.Identity.Name;
     var limit = Convert.ToInt32(TempData["totalLimit"]);
     var spent = Convert.ToInt32(TempData["totalSpent"]);
-    int difference = limit - spent;
     int budgetMonth = DateTime.Now.Month;
     var emptyBudget = Convert.ToBoolean(TempData["isBudgetEmpty"]);
     string hasPastBudget = Convert.ToString(TempData["hasPastBudget"]);
     TempData.Keep("hasPastBudget");
     int appType = Convert.ToInt32(TempData["AppType"]);
+    var currentMonth = DateTime.Now.ToString("MMMM");
 }
 
 <div style="text-align:center; margin-top:100px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
-<h3 style="text-align:center; color:#81cac4; font-weight: bold; margin-top:100px;">The Painless Budget</h3>
-<div style="border-bottom: 1px solid #cfd8dc;"></div>
+<h3 style="text-align:center; margin-top:100px;">The Painless Budget</h3>
+<div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
 @if (!SignInManager.IsSignedIn(User))
 {
@@ -27,30 +27,31 @@
 }
 else
 {
-    @if (emptyBudget)
+    if (emptyBudget)
     {
         if (hasPastBudget == "True")
         {
-            <div style="border-bottom: 1px solid #b2dfdb;"></div>
-            <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@DateTime.Now.ToString("MMMM")</h3>
+            <div style="border-bottom: 1px dotted #b2dfdb;"></div>
+            <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@currentMonth</h3>
+            <h5 style="text-align: center;">A budget has not yet been created for the month of @currentMonth.</h5>
             <div style="margin-top:35px;">
                 <div class="row">
                     <div class="col l12 m12 s12" align="center">
                         @*Wants to use past budget limit*@
                         <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = hasPastBudget })">
                             @*Use last month's set budget limits*@
-                            <button class="waves-effect waves-light btn-large #cfd8dc sharpCorners" style="font-weight:bold; font-size:20px; margin-top:10px;" type="submit" name="Save">
-                                <i class="material-icons left">local_atm</i>Use Last Month's Budget Limits
+                            <button class="waves-effect waves-light btn-large grey darken-3 lighterBrown-hover sharpCorners" style="font-weight:bold; font-size:20px; margin-top: 10px; margin-bottom: 5px;" type="submit" name="Save">
+                                <i class="material-icons left">replay</i>Use Last Month's Budget Limits for @currentMonth
                             </button>
                             @Html.Hidden("Email", user)
                             @Html.Hidden("Month", DateTime.Now.Month)
                         </form>
-                        <button id="unhide-set-budget-form" class="waves-effect waves-light btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px; margin-top:10px;">
-                            <i class="material-icons left">local_atm</i>Set New Budget Limits
+                        <button id="unhide-set-budget-form" class="waves-effect waves-light lightBrown-hover btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px; margin-top:10px;">
+                            <i class="material-icons left">create</i>Create New Budget Limits
                         </button>
-                        <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
-                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
-                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
+                        <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
+                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect lightBrown-hover waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
+                        <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
                     </div>
                 </div>
             </div>
@@ -63,7 +64,7 @@ else
                 }
                 <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = pastBudgetLimits })">
                     <div style="margin-top:35px; text-align:center;">
-                        <button class="aves-effect waves-light btn-large sharpCorners black-text" style="background-color:#212121; font-weight:bold; font-size:20px;" type="submit" name="Save">
+                        <button class="waves-effect waves-light btn-large sharpCorners black-text" style="background-color:#212121; font-weight:bold; font-size:20px;" type="submit" name="Save">
                             <i class="material-icons left">local_atm</i>Save Budget Limits
                         </button>
                     </div>
@@ -135,7 +136,7 @@ else
             bool pastBudgetLimits = false;
             <form method="post" action="@Url.Action("Index", "Budgets", new { usePastBudgetLimit = pastBudgetLimits })">
                 <div style="margin-top:35px; text-align:center;">
-                    <button class="aves-effect waves-light btn-large black-text sharpCorners" style="background-color:#b2dfdb; font-weight:bold; font-size:20px;" type="submit" name="Save">
+                    <button class="waves-effect waves-light btn-large black-text sharpCorners" style="background-color:#b2dfdb; font-weight:bold; font-size:20px;" type="submit" name="Save">
                         <i class="material-icons left">local_atm</i>Set Budget Limits
                     </button>
                 </div>
@@ -204,18 +205,18 @@ else
     {
         <div style="margin-top:55px; margin-bottom: 55px; text-align:center;">
             <h5 style="text-align:center; color:#b2dfdb; margin-top:10px;">@TempData["successLimitsUpdated"]</h5>
-            <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@DateTime.Now.ToString("MMMM")</h3>
-            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">add_box</i>Add Transaction</a>
+            <h3 style="text-align:center; color:#cfd8dc; font-weight:bold; margin-bottom:15px;">@currentMonth</h3>
+            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">add_box</i>Add Transaction</a>
             @foreach (var item in Model)
             {
-                <a asp-action="Edit" asp-route-id="@item.Id" class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">edit</i>Edit Budget Limits</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">edit</i>Edit Budget Limits</a>
             }
-            <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
-            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
-            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
+            <a href='@Url.Action("PastBudgets", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">date_range</i>View Past Budgets</a>
+            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">trending_up</i>Budget Analytics</a>
+            <a href='@Url.Action("AddTransaction", "Budgets")' class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">insert_chart</i>Transfer to Excel</a>
         </div>
 
-        @foreach (var item in Model.Where(x => x.Month == budgetMonth))
+        foreach (var item in Model.Where(x => x.Month == budgetMonth))
         {
             <div class="container" style="margin-bottom:100px;">
                 <div class="row">
@@ -230,7 +231,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingG.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingG.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.GroceryLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartGrocery" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -253,7 +254,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingH.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingH.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.HousingLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartHousing" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -278,7 +279,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingE.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingE.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.EntLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartEntertainment" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -301,7 +302,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingB.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingB.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.BillsLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartBills" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -326,7 +327,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingGas.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingGas.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.GasLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartGas" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -349,7 +350,7 @@ else
                         @*Still some of the budget left*@
                         else
                         {
-                            <h5 style="margin-left:150px;"><span style="color:#b2dfdb">$@remainingM.ToString("#,##0.00")</span></h5>
+                            <h5 style="margin-left:150px;"><span style="color:#54b798">$@remainingM.ToString("#,##0.00")</span></h5>
                         }
                         <a class="btn tooltipped" style="margin-bottom:25px; margin-left:150px; background-color:#212121; font-weight:bold;" data-position="right" data-tooltip="$@item.MiscLimit.ToString("#,##0.00")">View Budget Limit</a>
                         <div id="donutchartMisc" class="center-div" style="width: 600px; height: 300px; margin-top:10px;"></div>
@@ -366,7 +367,6 @@ else
     }
 }
 
-
 <style>
     #Total Spent {
         color: #cfd8dc !important;
@@ -376,10 +376,15 @@ else
         color: #cfd8dc !important;
     }
 
-    footer {
-        position:fixed;
-        width: 100%;
-        bottom: 0px;
+    .lightBrown-hover:hover {
+        background-color: #424242 !important;
+    }
+
+    .footer {
+        position: absolute;
+        right: 0;
+        bottom: 0 !important;
+        left: 0;
     }
 </style>
 
@@ -422,7 +427,7 @@ else
                 }
                 , title: 'Food/Groceries',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#cfd8dc',
@@ -452,7 +457,7 @@ else
                 }
                 , title: 'Housing/Rent',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#ffffff',
@@ -482,7 +487,7 @@ else
                 }
                 , title: 'Entertainment',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#cfd8dc',
@@ -512,7 +517,7 @@ else
                 }
                 , title: 'Bills',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#cfd8dc',
@@ -542,7 +547,7 @@ else
                 }
                 , title: 'Gas/Car',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#cfd8dc',
@@ -572,7 +577,7 @@ else
                 }
                 , title: 'Miscellaneous',
                 fontSize: 17,
-                colors: ['#e6c5c4', '#6cb7b1'],
+                colors: ['#e6c5c4', '#54b798'],
                 pieHole: 0.5,
                 backgroundColor: 'black',
                 color: '#cfd8dc',
