--- a/MyWebsite/Views/Weather/Index.cshtml
+++ b/MyWebsite/Views/Weather/Index.cshtml
@@ -39,6 +39,11 @@
 }
 else
 {
+
+    <div align="center" style="margin-top:20px;">
+        <a class="waves-effect waves-light btn-large black-text z-depth-1" style="border-radius:50px;"><i style="color:#ff7733;" class="fas fa-user-circle"></i><b> Manage My Weather Account</b></a>
+        <a class="waves-effect waves-light btn-large black-text z-depth-1" style="border-radius:50px;"><i style="color:#ff7733;" class="fas fa-cloud-sun"></i><b> Manage My Weather Alerts</b></a>
+    </div>
 }
 
 
