--- a/MyWebsite/Views/Account/ForgotPassword.cshtml
+++ b/MyWebsite/Views/Account/ForgotPassword.cshtml
@@ -1,24 +1,30 @@
 ﻿@model ForgotPasswordViewModel
-@{
-    ViewData["Title"] = "Forgot your password?";
-}
+<link rel="stylesheet" href="~/css/materialize.css" />
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+<h3 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">FORGOT PASSWORD</h3>
+
+<div style="width: 30%; margin-left: 150px; margin-top: 150px;">
+    <div class="row">
+        <div class="col-s6">
+            <h4 style="text-align:center; margin-top:100px; font-weight:200; letter-spacing:1.5px;">Enter Your Email</h4>
+            <div class="row">
+                <div class="col-md-4">
+                    <form asp-action="ForgotPassword" method="post">
+                        <div class="form-group">
+                            <label class="textGrey" asp-for="Email"></label>
+                            <input asp-for="Email" style="color: #cfd8dc"/>
+                            <span asp-validation-for="Email"></span>
+                        </div>
+                        <button style="margin-top:10px; background-color:#81cac4; font-weight:bold;" type="submit" class=" waves-effect waves-light lightTeal-hover btn sharpCorners black-text">Reset Password</button>
+                    </form>
+                </div>
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+        </div>
     </div>
 </div>
+
+<div style="height:300px;"></div>
+
 
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
