--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -7,14 +7,14 @@
 }
 
 
-<div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h3 style="text-align:center; font-weight:bold; color:#81cac4; margin-top:100px;">The Painless Budget</h3>
+<div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial", 1)</p></div>
+<h3 style="text-align:center; margin-top:100px;">The Painless Budget</h3>
 <div style="border-bottom: 1px solid #cfd8dc;"></div>
 
 
 <div class="container">
-    <div style="margin-top:55px; text-align:center;">
-        <a href='@Url.Action("Index", "Budgets", new { userName = user })'; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+    <div style="margin-top:25px; text-align:center;">
+        <a href='@Url.Action("Index", "Budgets", new { userName = user })'; class="waves-effect waves-light btn-large sharpCorners lightBrown-hover grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
         @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
     </div>
     <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h4>
@@ -62,7 +62,7 @@
 @*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
     <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Past Transactions</h5>
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
+    <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_dining</i>Grocery</a>
         <table class="table" id="transactionsG" align="center" style="display:none; width:25%; margin-bottom:25px;">
             <tr style="border-bottom: 1px dotted #cfd8dc">
                 <th>Date</th>
@@ -89,7 +89,7 @@
                 </tr>
             }
         </table>
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">home</i>Housing</a>
+    <a class="waves-effect waves-light lightBrown-hover btn-large sharpCorners grey darken-4" id="transaction-btnH" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">home</i>Housing</a>
     <table class="table" id="transactionsH" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -116,7 +116,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnB" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">monetization_on</i>Bills</a>
+    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnB" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">monetization_on</i>Bills</a>
     <table class="table" id="transactionsB" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -143,7 +143,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnE" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_activity</i>Entertainment</a>
+    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnE" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">local_activity</i>Entertainment</a>
     <table class="table" id="transactionsE" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -170,7 +170,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnGas" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">drive_eta</i>Gas</a>
+    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnGas" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">drive_eta</i>Gas</a>
     <table class="table" id="transactionsGas" align="center" style="display:none; width:25%; margin-bottom:25px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -197,7 +197,7 @@
         }
     </table>
 
-    <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnM" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">gesture</i>Miscellaneous</a>
+    <a class="waves-effect waves-light btn-large lightBrown-hover sharpCorners grey darken-4" id="transaction-btnM" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">gesture</i>Miscellaneous</a>
     <table class="table" id="transactionsM" align="center" style="display:none; width:25%; margin-bottom:15px;">
         <tr style="border-bottom: 1px dotted #cfd8dc">
             <th>Date</th>
@@ -273,6 +273,10 @@
 
     .trashcan-icon:hover {
         color: #81cac4 !important;
+    }
+
+    .lightBrown-hover:hover {
+        background-color: #424242 !important;
     }
 
 </style>
