--- a/MyWebsite/Views/Home/Index.cshtml
+++ b/MyWebsite/Views/Home/Index.cshtml
@@ -1,6 +1,15 @@
-﻿@{ string lagoonNebulaText = "The Lagoon Nebula is a giant interstellar cloud in the constellation Sagittarius and is estimated to be 4,000-6,000 light-years from the Earth. Credits: NASA, ESA, and STScI";}
+﻿@{
+    string lagoonNebulaText = "The Lagoon Nebula is a giant interstellar cloud in the constellation Sagittarius and is estimated to be 4,000-6,000 light-years from the Earth. Credits: NASA, ESA, and STScI";
+    var loggedOutMsg = "";
+    if (ViewBag.LoggedOut != null)
+    {
+        loggedOutMsg = ViewBag.LoggedOut;
+    }
+}
 
 <div id="particles-js" style="height:500px;"></div>
+
+<div><p style="text-align: center; margin-top: 10px; color: #81cac4;">@loggedOutMsg</p></div>
 
 <div>
     <ul class="collapsible">
@@ -14,11 +23,11 @@
 
 @*Main Image*@
 <div class="parallax-container">
-    <div class="parallax"><img src="~/images/nebula.png" /></div>
+    <div class="parallax"><img src="~/images/nebula.png" alt="Image of Nebula" /></div>
 </div>
 
-<h3 style="text-align:center; margin-top:40px; font-weight:200; font-size:30px; letter-spacing:1.5px;">TECHNOLOGIES USED</h3>
-<div class="containter center-div" style="background-color:#050505; margin-top:40px; margin-bottom:150px; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
+<h3 style="text-align:center; margin-top:40px; font-weight:200; font-size:30px; letter-spacing:1.5px;">TECHNOLOGIES</h3>
+<div class="container center-div" style="background-color:#050505; margin-top:40px; margin-bottom:150px; text-align:center; width:55%; padding:10px; border: .5px dotted #cfd8dc;">
     <ul id="tech-used">
         <li>C#</li>
         <li>ASP.NET MVC</li>
@@ -43,15 +52,6 @@
     </ul>
 </div>
 
-<style>
-    #tech-used {
-        -webkit-column-count: 4;
-        -moz-column-count: 4;
-        column-count: 4;
-        color: #cfd8dc;
-        font-size: 18px;
-    }
-</style>
 
 <script src="~/js/particles.js"></script>
 
